<resources>
    <string name="app_name">login</string>
    <string name="action_settings">Settings</string>
    <string name="user">Correo electrónico</string>
    <string name="pass">Contraseña</string>
    <string name="login">Iniciar sesión</string>
    <string name="or">o</string>
    <string name="registrarse">Registrarse</string>
    <string name="nombre">Nombre</string>
    <string name="cancelar">Cancelar</string>
    <string name="registrar">Registrar</string>
    <string name="facebook_app_id">1094618428070503</string>
    <string name="fb_login_protocol_scheme">fb1094618428070503</string>

</resources>
