<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#6BDA7BEA"
    tools:context=".RegistroActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edUserLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="45dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user"
            android:inputType="text"
            android:textColor="#0E0E0E"
            android:textStyle="bold" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edNombreLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="@+id/edUserLayout"
        app:layout_constraintStart_toStartOf="@+id/edUserLayout"
        app:layout_constraintTop_toBottomOf="@+id/edUserLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nombre"
            android:inputType="text"
            android:textStyle="bold" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edPasswordLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="@+id/edNombreLayout"
        app:layout_constraintStart_toStartOf="@+id/edNombreLayout"
        app:layout_constraintTop_toBottomOf="@+id/edNombreLayout"
        app:passwordToggleDrawable="@drawable/ic_action_pass_visible"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/pass"
            android:inputType="textPassword"
            android:textStyle="bold" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btRegistrar"
        android:layout_width="144dp"
        android:layout_height="37dp"
        android:layout_marginStart="132dp"
        android:layout_marginTop="52dp"
        android:layout_marginBottom="326dp"
        android:background="#E91E63"
        android:fontFamily="@font/artifika"
        android:text="@string/registrar"
        android:textSize="16sp"
        android:textStyle="normal|bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edPasswordLayout"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btCancelar"
        android:layout_width="145dp"
        android:layout_height="3dp"
        android:layout_marginTop="175dp"
        android:layout_marginBottom="192dp"
        android:background="#03A2EBED"
        android:text="@string/cancelar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edPasswordLayout"
        app:layout_constraintVertical_bias="0.244"
        tools:layout_editor_absoluteX="-1dp"
        tools:visibility="invisible" />


</androidx.constraintlayout.widget.ConstraintLayout>